# SpellingBeeSolver

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Checker.cpp  Checker.h  Makefile  Node.cpp  Node.h  README.md  Solver.cpp  Solver.h  SpellingBeeSolver  Trie.cpp  Trie.h  bigdict.txt  dictionary.txt  sbsolve.cpp  sbsolve.h  tests[1]_include.cmake  ui.cpp  ui.h
client/: CMakeLists.txt
client/inc/: client.h
client/src/: CMakeLists.txt  client.cpp
dicts/: sbsolvedict.txt
inc/: Solver.h  Trie.h  ui.h
lib/: CMakeLists.txt
lib/SolverLib/inc/: Solver.h  Trie.h
lib/SolverLib/src/: CMakeLists.txt  Solver.cpp  Trie.cpp
packaging/: CMakeLists.txt  postinst  sbsolved.service
src/: CMakeLists.txt  Solver.cpp  Trie.cpp  sbsolve.cpp  ui.cpp
test/: sbsolve_test.cc  testTrie.cc  trie_test.cc
