set(CPACK_PACKAGE_NAME ${PROJECT_NAME})
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Package to solve the NY Times Spelling Bee")
set(CPACK_PACKAGE_VENDOR "Taylor Foster")
set(CPACK_VERBATIM_VARIABLE YES)
set(CPACK_PACKAGE_INSTALL_DIRECTORY ${CPACK_PACKAGE_NAME})

set(CPACK_PACKAGE_VERSION_MAJOR ${PROJECT_VERSION_MAJOR})
set(CPACK_PACKAGE_VERSION_MINOR ${PROJECT_VERSION_MINOR})
set(CPACK_PACKAGE_VERSION_PATCH ${PROJECT_VERSION_PATCH})

set(CPACK_PACKAGE_CONTACT "taylor.foster23@gmail.com")
set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Taylor Foster")

set(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA ${PROJECT_SOURCE_DIR}/packaging/postinst)

set(CPACK_DEBIAN_FILE_NAME DEB-DEFAULT)
set(CPACK_COMPONENTS_GROUPING ALL_COMPONENTS_IN_ONE)
set(CPACK_DEB_COMPONENT_INSTALL YES)

install(FILES ${PROJECT_SOURCE_DIR}/packaging/sbsolved.service
        DESTINATION /etc/systemd/system
)

install(FILES ${PROJECT_SOURCE_DIR}/dicts/sbsolvedict.txt
        DESTINATION /usr/bin
)

include(CPack)